# meal-planner

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README-DEPLOYMENT.md  README.md  docker-compose.production.yml  docker-compose.yml  env.example  env.production.example  tunnel.yml.example
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_squashed_schema.py  001_initial_schema.py  002_add_pgvector_support.py  003_add_liked_column_to_recipe_feedbacks.py  004_add_enhanced_meal_plan_context_and_user_preferences.py  005_change_grocery_item_checked_to_boolean.py  04071db79fc3_initial_migration_with_all_tables.py  3eacbf670302_add_liked_column_to_recipe_feedbacks.py  701e5a180d5d_add_name_to_grocery_list.py  729e4ef57a3e_add_enhanced_meal_plan_context_and_user_.py  9d3f2c7b1a4e_add_pantry_and_feedback_notes.py  b4e8d1f2a9c3_add_meal_plan_date_range_check.py
backend/app/: main.py  utils.py
backend/app/agents/: meal_planning_agent.py  optimized_meal_planning_agent.py  pydantic_recipe_agent.py  recipe_agent.py  recipe_deps.py  unified_culinary_agent.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  exceptions.py  rate_limit.py  security.py  vector_store.py
backend/app/models/: __init__.py  meal_plan.py  pantry.py  recipe.py  user.py
backend/app/schemas/: dashboard.py  grocery.py  llm_response.py  meal_plan.py  pantry.py  recipe.py  user.py
backend/app/services/: email_service.py  ingredient_service.py  scheduler_service.py
backend/docs/: token-optimization-guide.md  vector-database-guide.md  verification-guide.md
backend/scripts/: populate_embeddings.py  simple_vector_verify.py  test.sh  verify_vector_db.py
backend/tests/: __init__.py  conftest.py  test_grocery_notifications.py  test_ingredient_service.py  test_meal_planning_agent.py  test_meal_planning_basic.py  test_models.py  test_scheduler_service.py  test_schemas.py  test_vector_store.py
backend/tests/api/: test_dashboard_api.py  (+5 more)
(+108 files in other folders)
